fix expense types list overlapping after wrap window

--- a/static/style.css
+++ b/static/style.css
@@ -74,6 +74,7 @@ a {
 #list-container ul li {
 	background-color: #ADD6AD;
 	display: inline;
+	margin-top: 5px;
 	text-decoration: none;
 	padding: 5px 10px 5px 10px;
 }
